--- a/css/styles.css
+++ b/css/styles.css
@@ -149,7 +149,11 @@
 }
 
 .is-hidden {
-    display: none;
+    position: absolute;
+    left: -9999px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
 }
 
 @media screen and (min-width: 768px) {
